--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>spring</module>
         <module>hack</module>
         <module>base</module>
+        <module>rpc</module>
+        <module>framework</module>
     </modules>
 
     <dependencyManagement>
@@ -66,6 +68,31 @@
                 <artifactId>guava</artifactId>
                 <version>19.0-rc2</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.4</version>
+            </dependency>
+
+
+
+            <!--spring boot start-->
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-releasetrain</artifactId>
+                <version>Fowler-SR2</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>1.5.4.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <!--spring boot end-->
+
 
         </dependencies>
     </dependencyManagement>
