--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -18,6 +18,50 @@
             <version>4.1.11.Final</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <executions>
+                    <execution>
+                        <id>run-server</id>
+                        <goals>
+                           <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>com.practice.framework.netty.action.EchoServer</mainClass>
+                    <arguments>
+                        <argument>9999</argument>
+                    </arguments>
+                </configuration>
+
+            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.codehaus.mojo</groupId>-->
+                <!--<artifactId>exec-maven-plugin</artifactId>-->
+                <!--<version>1.2.1</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>run-client</id>-->
+                        <!--<goals>-->
+                            <!--<goal>java</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+                <!--<configuration>-->
+                    <!--<mainClass>com.practice.framework.netty.action.EchoClient</mainClass>-->
+                    <!--<arguments>-->
+                        <!--<argument>localhost</argument>-->
+                        <!--<argument>9999</argument>-->
+                    <!--</arguments>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
+        </plugins>
+    </build>
 
 
 </project>
