--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.11.Final</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
