--- a/thread/pom.xml
+++ b/thread/pom.xml
@@ -13,8 +13,20 @@
     <artifactId>thread</artifactId>
     <dependencies>
         <dependency>
+            <groupId>practice</groupId>
+            <artifactId>hack</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>logback-classic</artifactId>
+                    <groupId>ch.qos.logback</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
