--- a/hack/pom.xml
+++ b/hack/pom.xml
@@ -33,6 +33,12 @@
             <version>2.8.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.12.1.GA</version>
+        </dependency>
+
     </dependencies>
 
 
