--- a/hack/pom.xml
+++ b/hack/pom.xml
@@ -32,6 +32,16 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.8.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.littleshoot</groupId>
+            <artifactId>littleproxy</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>io.netty</groupId>-->
+            <!--<artifactId>netty-all</artifactId>-->
+            <!--<version>5.0.0.Alpha2</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>javassist</groupId>
