--- a/thread/pom.xml
+++ b/thread/pom.xml
@@ -75,6 +75,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.0.0.M7</version>
                 <configuration>
                     <mainClass>com.practice.thread.controller.Application</mainClass>
                 </configuration>
